applications/scratch-5111605/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-5111605
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-5111605.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-5111605

            port:
              number: 80
